--- a/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
+++ b/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
@@ -406,13 +406,13 @@ TODOS:
   \item When is the cost of the aggregated solutions equal to the cost of the original problem respect to the corresponding unaggregated solutioon? \textcolor{red}{done}
   \item When is the corresponding unaggregated solution optimal for the original problem? \textcolor{red}{done}
   \item How to estend obs so that it holds for ED. 
-  \item rimuovere che combinazioni devono essere convesse, fa casino e non cambia niente
-  \item How to get a scenario for which the aggregated ED solution is feasible
+  \item rimuovere che combinazioni devono essere convesse, fa casino e non cambia niente \textcolor{red}{done}
+  \item How to get a scenario for which the aggregated ED solution is feasible 
   \item How to easily compute when an aggregated interval is "far" from such fesible scenario
   \item Unaggregate on those intervals first. \textcolor{red}{done}
   \item Add examples
   \item If the non aggregated variables are mixed integers, everything works the same.
-  \item For \(\rho_r\) constraints which behave well under generalisez convex combinations of variables can be excluded.
+  \item For \(\rho_r\) constraints which behave well under generalisez convex combinations of variables can be excluded. \textcolor{red}{done}
 \end{itemize}
 }
 \gr[inline]{Secondo me ci sta scriverlo in maniera un filo generale perchè:
