--- a/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
+++ b/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
@@ -74,10 +74,23 @@ grestore
 \usepackage{wrapfig}
 \usepackage{dsfont}
 \usepackage{soul}
-
+\usepackage[backend=bibtex,style=alphabetic]{biblatex}
+\addbibresource{sample.bib}
 \usepackage{csquotes}
 \usepackage{hyperref}
 
+% \usepackage[
+%   backend=biber,
+%   style=alphabetic,
+%   sorting=nty,
+%   maxbibnames=99,
+%   url=false,  % Exclude URLs
+%   % issn = false
+%   %doi=false,   % Exclude DOIs
+%   %isbn=false
+% ]{biblatex}
+
+% \addbibresource{sample.bib}
 %
 % please place your own definitions here and don't use \def but
 % \newcommand{}{}
@@ -239,6 +252,7 @@ approach considering time interdependence of wind and solar power.}
 \maketitle
 
 \begin{abstract}
+\textcolor{violet}{
   In recent years, the integration of renewable energy sources into electrical grids has become a
    critical area of research due to the increasing need for sustainable
   and resilient energy systems.  To adress the
@@ -247,12 +261,11 @@ approach considering time interdependence of wind and solar power.}
   To tackle this, we propose an approach that aggregates time steps to reduce the problem size, 
   followed by an iterative refinement of the aggregation. We provide sufficient conditions under which
    the aggregated problem is equivalent to the original, unaggregated one, and refine the time intervals
-    that do not meet these conditions. \textcolor{violet}{write better:Additionally, we introduce a validation function to assess the accuracy
-     of the aggregated solutions.}
-Our method is tested on a fully renewable energy grid with hydrogen storage.
+    that do not meet these conditions.\textbf{write better:Additionally, we introduce a validation function to assess the feasibility of the aggregated solutions.
+Our method is tested on a fully renewable energy grid with hydrogen storage.}
  We generate scenarios for wind and photovoltaic (PV) power output using scenario generation techniques that capture temporal dependencies. 
  These dependencies are modeled with marginal distributions coupled with a Gaussian copula, ensuring that the generated scenarios reflect realistic 
- temporal correlations observed in historical data.
+ temporal correlations observed in historical data.}
 %Insert your abstract here. Include keywords, PACS and mathematical
 %subject classification numbers as needed.
 \keywords{First keyword \and Second keyword \and More}
@@ -266,21 +279,22 @@ Our method is tested on a fully renewable energy grid with hydrogen storage.
 \textbf{Context; literature overview. Small introduction on LP/MIP. Definition of stochastic optimization,
 definition of CEP, ED problems.}\\
 
+
+\textbf{OLD:}
+\textcolor{gray}{
 The threat of climate change is pushing policy-makers to pursue greater integration of renewable energy sources into electrical grids, while at the same time ensuring reliability and resilience of the grids. The model presented in this report explores the possibility of an electrical grid powered entirely through wind and photovoltaic (PV) systems, and supported by hydrogen storage.
 It is of interest to estimate the power generation capacity for both wind and solar, as well as the hydrogen storage and conversion capacities, that would be necessary in order to power a reliable grid supplying residential electricity load and industrial base load of both electricity and hydrogen for a given area, while minimizing the cost of implementing such infrastructure.
 The main difficulties arising when designing such a system lie in the great variability of the generation of electricity through wind and solar, since these resources are highly dependent on weather conditions, making it impossible to plan long-term by optimizing on forecasts, and requiring a statistical approach to ensure a robust model.
-
-A first step for estimating the optimal capacities is thus to have realistic scenarios on which to evaluate our model.
+A first step for estimating the optimal capacities is thus to have realistic scenarios on which to evaluate our model.}
+\textcolor{gray}{
 To generate the scenarios for wind and solar power generation we sampled from a joint probability density function (PDF) that was fit on historical data. The construction of the PDF for wind and solar is explained in detail in subsections \ref{subsection: weib estim} and \ref{subsection: beta estim} respectively. 
   In this simple model, while fitting on historical data we did not account for possible changes in future climate.\\
-On the other hand, electricity load is taken from the \textcolor{yellow}{\href{https://www.entsoe.eu/data/power-stats/}{ENTSO-E Statistical Reports}}. We normalised the 2023 data by country to indicate the trend of load throughout the year, dividing by mean hourly load: \textcolor{green}{this is then to be multiplied by the mean load of the area the policy maker is interested in serving with the modeled grid.}
-
+On the other hand, electricity load is taken from the \\href{https://www.entsoe.eu/data/power-stats/}{ENTSO-E Statistical Reports}. We normalised the 2023 data by country to indicate the trend of load throughout the year, dividing by mean hourly load: \textcolor{green}{this is then to be multiplied by the mean load of the area the policy maker is interested in serving with the modeled grid.}
 The scenario generation step is followed by an optimization process. The model, as described in section \ref{section: model}, takes in input the generation and load scenarios of the selected countries along with various parameters indicating costs and efficiency of the current state of technology and possible upper bounds for the decision variables, and returns the optimized capacity that is necessary to meet demand throughout a one year span, with minimal cost. The optimization problem is solved using the Gurobi solver.
 When optimizing over multiple scenarios jointly, the solver returns the minimal amount of infrastructure and capacities that is needed to have feasibility (that is, demand met at all time - no blackouts) over all scenarios in input, with minimal average cost over the scenarios.
-
 When considering a network with more than a single node, computational costs increase rapidly. Thus a small analysis is carried out to determine acceptable time steps on which time dependent data can be aggregated (the gathered data is usually on hourly steps) while maintaining the quality of the solution. 
 Results are then evaluated for a single node network and for more complex networks based in the European Union, for which the necessary data was publicly available. Appropriate validation functions are discussed to check feasibility over new scenarios, along with cost functions that give more realistic cost estimates compared to the optimal value given by the solver.
-
+}
 \section{MODEL}
 
 \subsection{SCENARIO GENERATION}
@@ -650,156 +664,160 @@ deal with the complexity arising from the introduction of the network structure 
 
 
 % BibTeX users please use one of
-%\bibliographystyle{spbasic}      % basic style, author-year citations
+%bibliographystyle{spbasic}      % basic style, author-year citations
 %\bibliographystyle{spmpsci}      % mathematics and physical sciences
 %\bibliographystyle{spphys}       % APS-like style for physics
-%\bibliography{}   % name your BibTeX data base
+%\bibliography{sample}   % name your BibTeX data base
 
-% Non-BibTeX users please use
-\begin{thebibliography}{}
-%
-% and use \bibitem to create references. Consult the Instructions
-% for authors for reference list style.
-%
-\bibitem{RefJ}
-% Format for Journal Reference
-Author, Article title, Journal, Volume, page numbers (year)
-% Format for books
-\bibitem{RefB}
-Author, Book title, page numbers. Publisher, place (year)
-% etc
+\printbibliography[
+heading=bibintoc,
+title={Bibliography}]
 
-
-\bibitem{European_H2_Market_landscape}
-Author, European Hydrogen Market Landscape - November 2023 Report, page numbers. Publisher, place (year)
-
-%@article{European_H2_Market_landscape,
-%title = {European Hydrogen Market Landscape - November 2023 Report},
-% journal = {European Journal of Operational Research},
-% volume = {},
-% number = {1},
-% pages = {},
-% year = {2023},
-% doi = {},
-% url = {https://observatory.clean-hydrogen.europa.eu/sites/default/files/2023-11/Report%2001%20-%20November%202023%20-%20The%20European%20hydrogen%20market%20landscape.pdf},
-% author = {European Hydrogen Observatory},
-% keywords = {},
-% abstract = {}
-% }
-
-\bibitem{WindDataSet}
-Author, Book Title, page numbers. Publisher, place (year)
-
-% @article{WindDataSet,
-% title = {Using bias-corrected reanalysis to simulate current and future wind power output},
-% journal = {Energy},
-% volume = {114},
-% pages = {1224-1239},
-% year = {2016},
-% issn = {0360-5442},
-% doi = {https://doi.org/10.1016/j.energy.2016.08.068},
-% url = {https://www.sciencedirect.com/science/article/pii/S0360544216311811},
-% author = {Iain Staffell and Stefan Pfenninger},
-% keywords = {Wind power, Wind farm, Reanalysis, Capacity factor, Energy yield, Europe},
-% abstract = {Reanalysis models are rapidly gaining popularity for simulating wind power output due to their convenience and global coverage. However, they should only be relied upon once thoroughly proven. This paper reports the first international validation of reanalysis for wind energy, testing NASA's MERRA and MERRA-2 in 23 European countries. Both reanalyses suffer significant spatial bias, overestimating wind output by 50% in northwest Europe and underestimating by 30% in the Mediterranean. We derive national correction factors, and show that after calibration national hourly output can be modelled with R2 above 0.95. Our underlying data are made freely available to aid future research. We then assess Europe's wind resources with twenty-year simulations of the current and potential future fleets. Europe's current average capacity factor is 24.2%, with countries ranging from 19.5% (Germany) to 32.4% (Britain). Capacity factors are rising due to improving technology and locations; for example, Britain's wind fleet is now 23% more productive than in 2005. Based on the current planning pipeline, we estimate Europe's average capacity factor could increase by nearly a third to 31.3%. Countries with large stakes in the North Sea will see significant gains, with Britain's average capacity factor rising to 39.4% and Germany's to 29.1%.}
-% }
+% % Non-BibTeX users please use
+% \begin{thebibliography}{}
+% %
+% % and use \bibitem to create references. Consult the Instructions
+% % for authors for reference list style.
+% %
+% \bibitem{RefJ}
+% % Format for Journal Reference
+% Author, Article title, Journal, Volume, page numbers (year)
+% % Format for books
+% \bibitem{RefB}
+% Author, Book title, page numbers. Publisher, place (year)
+% % etc
 
 
-\bibitem{PVDataSet}
-Author, Book Title, page numbers. Publisher, place (year)
-% @article{PVDataSet,
-% title = {Long-term patterns of European PV output using 30 years of validated hourly reanalysis and satellite data},
-% journal = {Energy},
-% volume = {114},
-% pages = {1251-1265},
-% year = {2016},
-% issn = {0360-5442},
-% doi = {https://doi.org/10.1016/j.energy.2016.08.060},
-% url = {https://www.sciencedirect.com/science/article/pii/S0360544216311744},
-% author = {Stefan Pfenninger and Iain Staffell},
-% keywords = {Solar energy, Meteorological reanalysis, Satellite irradiance estimation, Renewables, Grid integration of renewables},
-% abstract = {Solar PV is rapidly growing globally, creating difficult questions around how to efficiently integrate it into national electricity grids. Its time-varying power output is difficult to model credibly because it depends on complex and variable weather systems, leading to difficulty in understanding its potential and limitations. We demonstrate how the MERRA and MERRA-2 global meteorological reanalyses as well as the Meteosat-based CM-SAF SARAH satellite dataset can be used to produce hourly PV simulations across Europe. To validate these simulations, we gather metered time series from more than 1000 PV systems as well as national aggregate output reported by transmission network operators. We find slightly better accuracy from satellite data, but greater stability from reanalysis data. We correct for systematic bias by matching our simulations to the mean bias in modeling individual sites, then examine the long-term patterns, variability and correlation with power demand across Europe, using thirty years of simulated outputs. The results quantify how the increasing deployment of PV substantially changes net power demand and affects system adequacy and ramping requirements, with heterogeneous impacts across different European countries. The simulation code and the hourly simulations for all European countries are available freely via an interactive web platform, www.renewables.ninja.}
-% }
+% \bibitem{European_H2_Market_landscape}
+% Author, European Hydrogen Market Landscape - November 2023 Report, page numbers. Publisher, place (year)
+
+% %@article{European_H2_Market_landscape,
+% %title = {European Hydrogen Market Landscape - November 2023 Report},
+% % journal = {European Journal of Operational Research},
+% % volume = {},
+% % number = {1},
+% % pages = {},
+% % year = {2023},
+% % doi = {},
+% % url = {https://observatory.clean-hydrogen.europa.eu/sites/default/files/2023-11/Report%2001%20-%20November%202023%20-%20The%20European%20hydrogen%20market%20landscape.pdf},
+% % author = {European Hydrogen Observatory},
+% % keywords = {},
+% % abstract = {}
+% % }
+
+% \bibitem{WindDataSet}
+% Author, Book Title, page numbers. Publisher, place (year)
+
+% % @article{WindDataSet,
+% % title = {Using bias-corrected reanalysis to simulate current and future wind power output},
+% % journal = {Energy},
+% % volume = {114},
+% % pages = {1224-1239},
+% % year = {2016},
+% % issn = {0360-5442},
+% % doi = {https://doi.org/10.1016/j.energy.2016.08.068},
+% % url = {https://www.sciencedirect.com/science/article/pii/S0360544216311811},
+% % author = {Iain Staffell and Stefan Pfenninger},
+% % keywords = {Wind power, Wind farm, Reanalysis, Capacity factor, Energy yield, Europe},
+% % abstract = {Reanalysis models are rapidly gaining popularity for simulating wind power output due to their convenience and global coverage. However, they should only be relied upon once thoroughly proven. This paper reports the first international validation of reanalysis for wind energy, testing NASA's MERRA and MERRA-2 in 23 European countries. Both reanalyses suffer significant spatial bias, overestimating wind output by 50% in northwest Europe and underestimating by 30% in the Mediterranean. We derive national correction factors, and show that after calibration national hourly output can be modelled with R2 above 0.95. Our underlying data are made freely available to aid future research. We then assess Europe's wind resources with twenty-year simulations of the current and potential future fleets. Europe's current average capacity factor is 24.2%, with countries ranging from 19.5% (Germany) to 32.4% (Britain). Capacity factors are rising due to improving technology and locations; for example, Britain's wind fleet is now 23% more productive than in 2005. Based on the current planning pipeline, we estimate Europe's average capacity factor could increase by nearly a third to 31.3%. Countries with large stakes in the North Sea will see significant gains, with Britain's average capacity factor rising to 39.4% and Germany's to 29.1%.}
+% % }
 
 
-\bibitem{Dunkelflaut}
-Author, Book Title, page numbers. Publisher, place (year)
-% @Article{Dunkelflaut,
-% AUTHOR = {Li, Bowen and Basu, Sukanta and Watson, Simon J. and Russchenberg, Herman W. J.},
-% TITLE = {A Brief Climatology of Dunkelflaute Events over and Surrounding the North and Baltic Sea Areas},
-% JOURNAL = {Energies},
-% VOLUME = {14},
-% YEAR = {2021},
-% NUMBER = {20},
-% ARTICLE-NUMBER = {6508},
-% URL = {https://www.mdpi.com/1996-1073/14/20/6508},
-% ISSN = {1996-1073},
-% DOI = {10.3390/en14206508}
-% }
+% \bibitem{PVDataSet}
+% Author, Book Title, page numbers. Publisher, place (year)
+% % @article{PVDataSet,
+% % title = {Long-term patterns of European PV output using 30 years of validated hourly reanalysis and satellite data},
+% % journal = {Energy},
+% % volume = {114},
+% % pages = {1251-1265},
+% % year = {2016},
+% % issn = {0360-5442},
+% % doi = {https://doi.org/10.1016/j.energy.2016.08.060},
+% % url = {https://www.sciencedirect.com/science/article/pii/S0360544216311744},
+% % author = {Stefan Pfenninger and Iain Staffell},
+% % keywords = {Solar energy, Meteorological reanalysis, Satellite irradiance estimation, Renewables, Grid integration of renewables},
+% % abstract = {Solar PV is rapidly growing globally, creating difficult questions around how to efficiently integrate it into national electricity grids. Its time-varying power output is difficult to model credibly because it depends on complex and variable weather systems, leading to difficulty in understanding its potential and limitations. We demonstrate how the MERRA and MERRA-2 global meteorological reanalyses as well as the Meteosat-based CM-SAF SARAH satellite dataset can be used to produce hourly PV simulations across Europe. To validate these simulations, we gather metered time series from more than 1000 PV systems as well as national aggregate output reported by transmission network operators. We find slightly better accuracy from satellite data, but greater stability from reanalysis data. We correct for systematic bias by matching our simulations to the mean bias in modeling individual sites, then examine the long-term patterns, variability and correlation with power demand across Europe, using thirty years of simulated outputs. The results quantify how the increasing deployment of PV substantially changes net power demand and affects system adequacy and ramping requirements, with heterogeneous impacts across different European countries. The simulation code and the hourly simulations for all European countries are available freely via an interactive web platform, www.renewables.ninja.}
+% % }
 
 
-
-\bibitem{betaPV}
-Author, Book Title, page numbers. Publisher, place (year)
-% @article{betaPV,
-% title = {Prediction interval of wind power using parameter optimized Beta distribution based LSTM model},
-% journal = {Applied Soft Computing},
-% volume = {82},
-% pages = {105550},
-% year = {2019},
-% issn = {1568-4946},
-% doi = {https://doi.org/10.1016/j.asoc.2019.105550},
-% url = {https://www.sciencedirect.com/science/article/pii/S1568494619303308},
-% author = {Xiaohui Yuan and Chen Chen and Min Jiang and Yanbin Yuan},
-% keywords = {Wind power, Prediction interval, Long short-term memory neural network, Beta distribution, Particle swarm optimization},
-% abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the economic and safe operation of the wind turbine and providing support for analysis of the stability of power systems. The hybrid model (Beta-PSO-LSTM) of long short-term memory (LSTM) neural network and Beta distribution function based particle swarm optimization (PSO) is put forward for prediction interval of wind power. In order to enhance the performance of the Beta-PSO-LSTM for PIWP in training process, wind power series are divided into different power intervals, and then the Beta-PSO-LSTM is used to estimate each power interval of the original wind power series. Furthermore, based on the analysis of the interval forecasting error information in wind power training data set, Beta distribution model is proposed to get better PIWP, and PSO is used to optimize the parameters of the model. Finally, the proposed Beta-PSO-LSTM model is compared with the Beta distribution optimized by PSO based the BP neural network (Beta-PSO-BP), the normal distribution based LSTM neural network (Norm-LSTM), Beta distribution based LSTM neural network (Beta-LSTM), and Beta distribution optimized by iterative method based LSTM neural network (Beta-IM-LSTM) for PIWP. The simulation results show that the PIWP obtained by the Beta-PSO-LSTM model has higher reliability and narrower interval bandwidth, which can provide decision support for the safe and stable operation of power systems.}
-% }
-
-
-\bibitem{GaussCopula}
-Author, Book Title, page numbers. Publisher, place (year)
-% @ARTICLE{GaussCoupula,
-%   author={Papaefthymiou, George and Kurowicka, Dorota},
-%   journal={IEEE Transactions on Power Systems}, 
-%   title={Using Copulas for Modeling Stochastic Dependence in Power System Uncertainty Analysis}, 
-%   year={2009},
-%   volume={24},
-%   number={1},
-%   pages={40-49},
-%   keywords={Power system modeling;Stochastic systems;Power system analysis computing;Uncertainty;Random variables;Power system planning;Stochastic processes;Power generation;Context modeling;Aggregates;Copula;correlation;Monte Carlo simulation;stochastic dependence;stochastic generation;uncertainty analysis;wind power},
-%   doi={10.1109/TPWRS.2008.2004728}}
-
-
-\bibitem{weibullwind}
-Author, Book Title, page numbers. Publisher, place (year)
-% @article{weibullwind,
-% title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for Babaurband, Sindh Pakistan},
-% journal = {Energy Conversion and Management},
-% volume = {78},
-% pages = {956-967},
-% year = {2014},
-% issn = {0196-8904},
-% doi = {https://doi.org/10.1016/j.enconman.2013.06.062},
-% url = {https://www.sciencedirect.com/science/article/pii/S019689041300589X},
-% author = {Shahnawaz Farhan Khahro and Kavita Tabbassum and Amir Mahmood Soomro and Lei Dong and Xiaozhong Liao},
-% keywords = {Wind energy, Power density function, Weibull distribution, Frequency distribution, Wind rose},
-% abstract = {Pakistan is currently experiencing an acute shortage of energy and urgently needs new sources of affordable energy that could alleviate the misery of the energy starved masses. At present the government is increasing not only the conventional energy sources like hydel and thermal but also focusing on the immense potential of renewable energy sources like; solar, wind, biogas, waste-to-energy etc. The recent economic crisis worldwide, global warming and climate change have also emphasized the need for utilizing economic feasible energy sources having lowest carbon emissions. Wind energy, with its sustainability and low environmental impact, is highly prominent. The aim of this paper is to explore the wind power production prospective of one of the sites in south region of Pakistan. It is worth mentioning here that this type of detailed analysis is hardly done for any location in Pakistan. Wind power densities and frequency distributions of wind speed at four different altitudes along with estimated wind power expected to be generated through commercial wind turbines is calculated. Analysis and comparison of 5 numerical methods is presented in this paper to determine the Weibull scale and shape parameters for the available wind data. The yearly mean wind speed of the considered site is 6.712m/s and has power density of 310W/m2 at 80m height with high power density during April to August (highest in May with wind speed 9.595m/s and power density 732W/m2). Economic evaluation, to exemplify feasibility of installing wind turbines, is also done. The estimated cost of per kWh of electricity from wind is calculated as 0.0263US$/kWh. Thus the candidate site is recommended for some small stand-alone systems as well as for wind farm.}
-% }
-
-
-\bibitem{future_climate}
-Author, Book Title, page numbers. Publisher, place (year)
-% @article{future_climate,
-%     author = {Bett, P. E., Thornton, H. E., and Clark, R. T.},
-%     title = {European wind variability over 140 yr},
-%     journal = {Adv. Sci. Res., 10, 51–58},
-%     year = {2013}
-% }
+% \bibitem{Dunkelflaut}
+% Author, Book Title, page numbers. Publisher, place (year)
+% % @Article{Dunkelflaut,
+% % AUTHOR = {Li, Bowen and Basu, Sukanta and Watson, Simon J. and Russchenberg, Herman W. J.},
+% % TITLE = {A Brief Climatology of Dunkelflaute Events over and Surrounding the North and Baltic Sea Areas},
+% % JOURNAL = {Energies},
+% % VOLUME = {14},
+% % YEAR = {2021},
+% % NUMBER = {20},
+% % ARTICLE-NUMBER = {6508},
+% % URL = {https://www.mdpi.com/1996-1073/14/20/6508},
+% % ISSN = {1996-1073},
+% % DOI = {10.3390/en14206508}
+% % }
 
 
 
+% \bibitem{betaPV}
+% Author, Book Title, page numbers. Publisher, place (year)
+% % @article{betaPV,
+% % title = {Prediction interval of wind power using parameter optimized Beta distribution based LSTM model},
+% % journal = {Applied Soft Computing},
+% % volume = {82},
+% % pages = {105550},
+% % year = {2019},
+% % issn = {1568-4946},
+% % doi = {https://doi.org/10.1016/j.asoc.2019.105550},
+% % url = {https://www.sciencedirect.com/science/article/pii/S1568494619303308},
+% % author = {Xiaohui Yuan and Chen Chen and Min Jiang and Yanbin Yuan},
+% % keywords = {Wind power, Prediction interval, Long short-term memory neural network, Beta distribution, Particle swarm optimization},
+% % abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the economic and safe operation of the wind turbine and providing support for analysis of the stability of power systems. The hybrid model (Beta-PSO-LSTM) of long short-term memory (LSTM) neural network and Beta distribution function based particle swarm optimization (PSO) is put forward for prediction interval of wind power. In order to enhance the performance of the Beta-PSO-LSTM for PIWP in training process, wind power series are divided into different power intervals, and then the Beta-PSO-LSTM is used to estimate each power interval of the original wind power series. Furthermore, based on the analysis of the interval forecasting error information in wind power training data set, Beta distribution model is proposed to get better PIWP, and PSO is used to optimize the parameters of the model. Finally, the proposed Beta-PSO-LSTM model is compared with the Beta distribution optimized by PSO based the BP neural network (Beta-PSO-BP), the normal distribution based LSTM neural network (Norm-LSTM), Beta distribution based LSTM neural network (Beta-LSTM), and Beta distribution optimized by iterative method based LSTM neural network (Beta-IM-LSTM) for PIWP. The simulation results show that the PIWP obtained by the Beta-PSO-LSTM model has higher reliability and narrower interval bandwidth, which can provide decision support for the safe and stable operation of power systems.}
+% % }
 
-\end{thebibliography}
+
+% \bibitem{GaussCopula}
+% Author, Book Title, page numbers. Publisher, place (year)
+% % @ARTICLE{GaussCoupula,
+% %   author={Papaefthymiou, George and Kurowicka, Dorota},
+% %   journal={IEEE Transactions on Power Systems}, 
+% %   title={Using Copulas for Modeling Stochastic Dependence in Power System Uncertainty Analysis}, 
+% %   year={2009},
+% %   volume={24},
+% %   number={1},
+% %   pages={40-49},
+% %   keywords={Power system modeling;Stochastic systems;Power system analysis computing;Uncertainty;Random variables;Power system planning;Stochastic processes;Power generation;Context modeling;Aggregates;Copula;correlation;Monte Carlo simulation;stochastic dependence;stochastic generation;uncertainty analysis;wind power},
+% %   doi={10.1109/TPWRS.2008.2004728}}
+
+
+% \bibitem{weibullwind}
+% Author, Book Title, page numbers. Publisher, place (year)
+% % @article{weibullwind,
+% % title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for Babaurband, Sindh Pakistan},
+% % journal = {Energy Conversion and Management},
+% % volume = {78},
+% % pages = {956-967},
+% % year = {2014},
+% % issn = {0196-8904},
+% % doi = {https://doi.org/10.1016/j.enconman.2013.06.062},
+% % url = {https://www.sciencedirect.com/science/article/pii/S019689041300589X},
+% % author = {Shahnawaz Farhan Khahro and Kavita Tabbassum and Amir Mahmood Soomro and Lei Dong and Xiaozhong Liao},
+% % keywords = {Wind energy, Power density function, Weibull distribution, Frequency distribution, Wind rose},
+% % abstract = {Pakistan is currently experiencing an acute shortage of energy and urgently needs new sources of affordable energy that could alleviate the misery of the energy starved masses. At present the government is increasing not only the conventional energy sources like hydel and thermal but also focusing on the immense potential of renewable energy sources like; solar, wind, biogas, waste-to-energy etc. The recent economic crisis worldwide, global warming and climate change have also emphasized the need for utilizing economic feasible energy sources having lowest carbon emissions. Wind energy, with its sustainability and low environmental impact, is highly prominent. The aim of this paper is to explore the wind power production prospective of one of the sites in south region of Pakistan. It is worth mentioning here that this type of detailed analysis is hardly done for any location in Pakistan. Wind power densities and frequency distributions of wind speed at four different altitudes along with estimated wind power expected to be generated through commercial wind turbines is calculated. Analysis and comparison of 5 numerical methods is presented in this paper to determine the Weibull scale and shape parameters for the available wind data. The yearly mean wind speed of the considered site is 6.712m/s and has power density of 310W/m2 at 80m height with high power density during April to August (highest in May with wind speed 9.595m/s and power density 732W/m2). Economic evaluation, to exemplify feasibility of installing wind turbines, is also done. The estimated cost of per kWh of electricity from wind is calculated as 0.0263US$/kWh. Thus the candidate site is recommended for some small stand-alone systems as well as for wind farm.}
+% % }
+
+
+% \bibitem{future_climate}
+% Author, Book Title, page numbers. Publisher, place (year)
+% % @article{future_climate,
+% %     author = {Bett, P. E., Thornton, H. E., and Clark, R. T.},
+% %     title = {European wind variability over 140 yr},
+% %     journal = {Adv. Sci. Res., 10, 51–58},
+% %     year = {2013}
+% % }
+
+
+
+
+% \end{thebibliography}
 
 \end{document}
 % end of file template.tex
