--- a/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
+++ b/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
@@ -218,13 +218,12 @@ grestore
 %
 \begin{document}
 
-\title{Modeling of a fully reneweable energy grid with hydrogen storage.
+\title{Modelling of a fully renewable energy grid with hydrogen storage: time aggregation for a scalable Capacity Expansion Problem
 %\thanks{Grants or other notes
 %about the article that should go on the front page should be
 %placed here. General acknowledgments should be placed at the end of the article.}
 }
-\subtitle{A stochastic 
-approach considering time interdependence of wind and solar power.}
+\subtitle{}%A stochastic approach considering time interdependence of wind and solar power.}
 
 %\titlerunning{Short form of title}        % if too long for running head
 
