--- a/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
+++ b/ARTICLE/LaTeX_DL_468198_240419/articolo.tex
@@ -281,6 +281,27 @@ Our method is tested on a fully renewable energy grid with hydrogen storage.}
 definition of CEP, ED problems.}\\
 
 
+\begin{enumerate}
+  \item 100 parole contesto sociale (è importante perché...): cita: qualche report/programma dell'UE.
+  \item literature review: $\sim$ 10 articoli
+  \begin{itemize}
+    \item robust vs stochastic optimization, cite something
+    \item time aggregation: cite \{\textbf{???}\} for theory?
+    \item validation function is dealt with RH: cite\{Glomb\} for quality guarantees, cite \{Palma-Behnke\} for microgrid ED planning, maybe someone else
+    \item scenario generation: cite sources down
+  \end{itemize} 
+  \item cosa facciamo noi di speciale? 150 parole: We want to solve CEP to build grid that can be operated as smart with rolling horizon. Often used robust approach because computationally easier, we want to use stochastic.
+  \item how is this paper organized?
+\end{enumerate}
+
+
+\begin{enumerate}
+\item The threat of climate change is pushing policy-makers to pursue greater integration of renewable energy sources into electrical grids, while at the same time ensuring reliability and resilience through digital optimization of electric power distribution and transmission in smart grids \cite{EU_context}.
+One of the main difficulties arising when designing an electric power system relying on renewables is the great variability of the generation of electricity through wind and solar, since these resources are highly dependent on weather conditions, making it impossible to plan long-term by optimizing on forecasts, and requiring a statistical approach to ensure a robust model.
+\item 
+\end{enumerate}
+
+
 \textbf{OLD:}
 \textcolor{gray}{
 The threat of climate change is pushing policy-makers to pursue greater integration of renewable energy sources into electrical grids, while at the same time ensuring reliability and resilience of the grids. The model presented in this report explores the possibility of an electrical grid powered entirely through wind and photovoltaic (PV) systems, and supported by hydrogen storage.
