--- a/ARTICLE/LaTeX_DL_468198_240419/sample.bib
+++ b/ARTICLE/LaTeX_DL_468198_240419/sample.bib
@@ -15,6 +15,24 @@ keywords = {},
 abstract = {}
 }
 
+@misc{EU_context,
+  author = {European Commission},
+  journal = {},
+  number = {},
+  title = {Communication from the Commission: Guidance on Article 20a on sector integration of renewable electricity of Directive (EU)
+2018/2001 on the promotion of energy from renewable sources, as amended by Directive
+(EU) 2023/2413},
+  url = {https://energy.ec.europa.eu/document/download/efcd200c-b9ae-4a9c-98ab-73b2fd281fcc_en?filename=C_2024_5041_1_EN_ACT_part1_v10.pdf},
+  year = {2024}
+}
+
+@article{review_math_opt,
+  author={Michal Jasinski, Arsalan Najafi, et al},
+  title = {Operation and Planning of Energy Hubs Under Uncertainty - A Review of Mathematical Optimization Approaches},
+  year = {2022}
+}
+
+
 @misc{MOPTA,
   author       = {Riccardi, Morgari},
   title        = {MOPTA competition repository},
@@ -31,6 +49,51 @@ abstract = {}
       archivePrefix={arXiv},
       primaryClass={math.OC},
       url={https://arxiv.org/abs/2403.02559}, 
+}
+
+@article{INTRO_isolated_MIP,
+  author = {Hugo Morais, Pedro Faria, Peter Kadar, Zita Vale, H.M. Khodr},
+  journal = {Renewable Energy},
+  number = {},
+  title = {Optimal scheduling of a renewable micro-grid in an isolated load area using mixed-integer linear programming},
+  volume = {},
+  year = {2010}
+}
+
+@article{INTRO_Glomb,
+  author = {Lukas Glomb, Frauke Liers, Florian Roesel},
+  journal = {},
+  number = {},
+  title = {A rolling-horizon approach for multi-period optimization},
+  volume = {},
+  year = {}
+}
+
+@article{INTRO_Palma-Behnke,
+  author = {Rodrigo Palma-Behnke, Carlos Benavides, Fernando Lanas, Bernardo Severino, Lorenzo Reyes, Jaqueline Llanos, Doris Saez},
+  journal = {IEEE transactions on smart grid},
+  number = {},
+  title = {A microgrid energy management system based on the rolling horizon Strategy},
+  volume = {},
+  year = {2013}
+}
+
+@article{INTRO_karlsruhe,
+  author = {Hasan U. Yilmaz, Kai Mainzer, Dogan Keles},
+  journal = {},
+  number = {},
+  title = {Improving the performance of solving large scale mixed-integer energy system models by applying the fix-and-relax method},
+  volume = {},
+  year = {}
+}
+
+@article{INTRO_short-term,
+  author = {Ilkka Keppo, MAnfred Strubegger},
+  journal = {Energy},
+  number = {},
+  title = {Short term decisions for long term problems - The effect of foreshight on model based energy system analysis},
+  volume = {},
+  year = {}
 }
 
 @article{HORSCH2018207,
